component overlapping solved

--- a/src/components/CartHeader.css
+++ b/src/components/CartHeader.css
@@ -2,7 +2,7 @@
     background-color:#f2f2f2;
     padding: 0px 15px;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 120px;
 }
 
 h1 {
